[tool.poetry]
name = "conding-interview"
version = "0.1.0"
description = ""
authors = ["dev.gloomyfox <dev.gloomyfox@gmail.com>"]
readme = "README.md"
packages = [{include = "conding_interview"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
